# template-py-project

./: README.md  pyproject.toml
scripts/: setup_dev_environment.sh
src/template_project/: __init__.py
