[project]
name = "template-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "William C Grisaitis", email = "wgrisaitis@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "detect-secrets==1.5.0",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.0",
]

[tool.mypy]
install_types = true
non_interactive = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
